tests/ui/parser/issues/issue-68000-unicode-ident-after-missing-comma.stderr
error: expected `,`, or `}`, found `รถ`
  --> $DIR/issue-68000-unicode-ident-after-missing-comma.rs:2:22
   |
LL |     pub bar: Vec<i32>รถ
   |                      ^ help: try adding a comma: `,`

error: expected `:`, found `}`
  --> $DIR/issue-68000-unicode-ident-after-missing-comma.rs:4:1
   |
LL | pub struct Foo {
   |            --- while parsing this struct
LL |     pub bar: Vec<i32>รถ
   |                       - expected `:`
LL |
LL | }
   | ^ unexpected token

error: aborting due to 2 previous errors

