tests/ui/parser/issues/issue-68000-unicode-ident-after-missing-comma.rs
pub struct Foo {
    pub bar: Vec<i32>รถ
    //~^ ERROR expected `,`, or `}`, found `รถ`
} //~ ERROR expected `:`, found `}`

fn main() {}
